Working on the popup

--- a/tic_tac_toe/pubspec.yaml
+++ b/tic_tac_toe/pubspec.yaml
@@ -58,6 +58,8 @@ flutter:
   uses-material-design: true
   assets: 
     - assets/logo.png
+    - assets/X.png
+    - assets/O.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
